export enum DeviceStatus {
    Active,
    Inactive
}